# surface-apps

./: .pre-commit-config.yaml  .readthedocs.yaml  Install_or_Update.bat  README-dev.rst  README.rst  THIRD_PARTY_SOFTWARE.rst  install.bat  meta.yaml  py-3.10.conda-lock.yml  py-3.11.conda-lock.yml  py-3.12.conda-lock.yml  pyproject.toml
.github/workflows/: issue_to_jira.yml  pytest-unix-os.yml  pytest-windows.yml  python_analysis.yml  python_deploy_dev.yml  python_deploy_prod.yml  static-analysis.yml
devtools/: add_url_tag_sha256.py  check-copyright.py  git_message_hook.py  rename_my_app.py  run_conda_lock.py
docs/source/: api_reference.rst  conf.py  getting_started.rst  index.rst  iso_surfaces.rst  modules.rst  surface_apps.iso_surfaces.rst  surface_apps.rst  usage.rst
environments/: py-3.10-linux-64-dev.conda.lock.yml  py-3.10-linux-64.conda.lock.yml  py-3.10-win-64-dev.conda.lock.yml  py-3.10-win-64.conda.lock.yml  py-3.11-linux-64-dev.conda.lock.yml  py-3.11-linux-64.conda.lock.yml  py-3.11-win-64-dev.conda.lock.yml  py-3.11-win-64.conda.lock.yml  py-3.12-linux-64-dev.conda.lock.yml  py-3.12-linux-64.conda.lock.yml  py-3.12-win-64-dev.conda.lock.yml  py-3.12-win-64.conda.lock.yml
my_app/: __init__.py  main.py
my_app-assets/uijson/: hello.ui.json
my_app/commands/: __init__.py  hello_world.py
surface_apps/: __init__.py  driver.py  main.py
surface_apps-assets/: __init__.py
surface_apps-assets/uijson/: hello.ui.json  iso_surfaces.ui.json
surface_apps/commands/: hello_world.py
surface_apps/iso_surfaces/: driver.py  params.py  utils.py
tests/: __init__.py  assets_path_test.py  utils_test.py  version_test.py
tests/run_tests/: iso_surfaces_test.py
